--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -15,8 +15,44 @@
 </head>
 
 <body>
-	<div class="container text-center  " id="idmainContainer">
+	<div class="container  text-center  " id="idmainContainer">
 		<h1 class="titulo">Komikilandia</h1>
+
+		<div id="carouselExampleIndicators" class="carousel slide"
+			data-ride="carousel">
+			<ol class="carousel-indicators">
+				<li data-target="#carouselExampleIndicators" data-slide-to="0"
+					class="active"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+			</ol>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img class="d-block w-100" src="imagenes/dcv2.jpg" alt="First slide">
+				</div>
+				<div class="carousel-item">
+					<img class="d-block w-100" src="imagenes/marvelv2.jpg"
+						alt="Second slide">
+				</div>
+				<div class="carousel-item">
+					<img class="d-block w-100" src="imagenes/xmen.jpg"
+						alt="Third slide">
+				</div>
+			</div>
+			<a class="carousel-control-prev" href="#carouselExampleIndicators"
+				role="button" data-slide="prev"> <span
+				class="carousel-control-prev-icon" aria-hidden="true"></span> <span
+				class="sr-only">Previous</span>
+			</a> <a class="carousel-control-next" href="#carouselExampleIndicators"
+				role="button" data-slide="next"> <span
+				class="carousel-control-next-icon" aria-hidden="true"></span> <span
+				class="sr-only">Next</span>
+			</a>
+		</div>
+		<br>
+		<br>
+		<br>
+		<br>
 	</div>
 
 
@@ -24,20 +60,20 @@
 		<div class='modal-dialog'>
 			<div class='modal-content'>
 				<!--Modal header-->
-				<div class='modal-header d-flex flex-column'>
+				<div class='modal-header d-flex flex-column' id='modal-header'>
 
 					<!--js data -->
 				</div>
 
 				<!--Modal body-->
-				<div class='modal-body'>
+				<div class='modal-body' id='modal-body'>
 
 
 					<!--js data -->
 				</div>
 
 				<!--Modal footer-->
-				<div class='modal-footer'>
+				<div class='modal-footer' id='modal-footer'>
 
 					<!--Close boton-->
 
