--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -15,12 +15,14 @@
 </head>
 
 <body>
+<a class="btn btn-success btn-md text-white" href="CrearComic">Crear</a>
 	<div class="container  text-center  " id="idmainContainer">
 		<h1 class="titulo">Komikilandia</h1>
-
+  
 		
 		
 	</div>
+
 
 
 	<div class='modal' id='myModal'>
