select genero (crearComic) ez doa

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -15,19 +15,15 @@
 </head>
 
 <body>
-
-<a class="btn btn-success btn-md text-white" href="CrearComic">Crear</a>
-
-
-
-	<div class="container  text-center  " id="idmainContainer">
-		<h1 class="titulo">Komikilandia</h1>
-  
+ <a class="btn btn-success btn-md text-white  text-center" href="CrearComic">Crear</a>
+ 
+ <h1 class="titulo text-white text-center">Komikilandia</h1>
+ 
+ 
+	<div class="container  text-center  " id="idmainContainer">		
 		
-		
+  		
 	</div>
-
-
 
 	<div class='modal' id='myModal'>
 		<div class='modal-dialog'>
