insert comic bukatzen (konfirmazioa)

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,7 +20,7 @@
  
  <h1 class="titulo text-white text-center">Komikilandia</h1>
  
- <a class=" float-right crear btn btn-success btn-md text-white  text-center"  href="CrearComic"><i class='fa fa-plus'></i></a>
+ <a class=" float-right crear btn btn-success btn-md text-white  text-center" id="mas"  href="CrearComic"><i class='fa fa-plus'></i></a>
  
  
 	<div class="container  text-center  " id="idmainContainer">		
